{
  "version": 4,
  "terraform_version": "1.3.8",
  "serial": 39,
  "lineage": "c1d124ce-f4ad-a862-ef2c-cdde87298605",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "gotore_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:941219474185:loadbalancer/app/gotore-alb/21925f8c83dfdb49",
            "arn_suffix": "app/gotore-alb/21925f8c83dfdb49",
            "desync_mitigation_mode": "defensive",
            "dns_name": "gotore-alb-1883694374.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:941219474185:loadbalancer/app/gotore-alb/21925f8c83dfdb49",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "gotore-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0622dc70f690b34e8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-056b152148abed2bd"
              },
              {
                "subnet_id": "subnet-0aef9a60d9f74fbec"
              }
            ],
            "subnets": [
              "subnet-056b152148abed2bd",
              "subnet-0aef9a60d9f74fbec"
            ],
            "vpc_id": "vpc-0a0caf6a1df38b126",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "aws_s3_bucket.gotore_alb_logs",
            "aws_security_group.gotore_sg_alb",
            "aws_subnet.gotore_public_subnet_1a",
            "aws_subnet.gotore_public_subnet_1c",
            "aws_vpc.gotore_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "gotore_alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:941219474185:listener/app/gotore-alb/21925f8c83dfdb49/0d807ce41ce0ab33",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:941219474185:targetgroup/gotore-alb-tg/c1d1862559461fa5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:941219474185:listener/app/gotore-alb/21925f8c83dfdb49/0d807ce41ce0ab33",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:941219474185:loadbalancer/app/gotore-alb/21925f8c83dfdb49",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.gotore_alb",
            "aws_alb_target_group.gotore_alb_tg",
            "aws_s3_bucket.gotore_alb_logs",
            "aws_security_group.gotore_sg_alb",
            "aws_subnet.gotore_public_subnet_1a",
            "aws_subnet.gotore_public_subnet_1c",
            "aws_vpc.gotore_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener_rule",
      "name": "gotore_alb_listener_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:941219474185:targetgroup/gotore-alb-tg/c1d1862559461fa5",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:941219474185:listener-rule/app/gotore-alb/21925f8c83dfdb49/0d807ce41ce0ab33/447a3244aa508ffd",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:941219474185:listener-rule/app/gotore-alb/21925f8c83dfdb49/0d807ce41ce0ab33/447a3244aa508ffd",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:941219474185:listener/app/gotore-alb/21925f8c83dfdb49/0d807ce41ce0ab33",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.gotore_alb",
            "aws_alb_listener.gotore_alb_listener",
            "aws_alb_target_group.gotore_alb_tg",
            "aws_s3_bucket.gotore_alb_logs",
            "aws_security_group.gotore_sg_alb",
            "aws_subnet.gotore_public_subnet_1a",
            "aws_subnet.gotore_public_subnet_1c",
            "aws_vpc.gotore_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "gotore_alb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:941219474185:targetgroup/gotore-alb-tg/c1d1862559461fa5",
            "arn_suffix": "targetgroup/gotore-alb-tg/c1d1862559461fa5",
            "connection_termination": false,
            "deregistration_delay": "15",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:941219474185:targetgroup/gotore-alb-tg/c1d1862559461fa5",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "gotore-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a0caf6a1df38b126"
          },
          "dependencies": [
            "aws_alb.gotore_alb",
            "aws_s3_bucket.gotore_alb_logs",
            "aws_security_group.gotore_sg_alb",
            "aws_subnet.gotore_public_subnet_1a",
            "aws_subnet.gotore_public_subnet_1c",
            "aws_vpc.gotore_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gotore_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:941219474185:internet-gateway/igw-0cd313f1a0f25cf0e",
            "id": "igw-0cd313f1a0f25cf0e",
            "owner_id": "941219474185",
            "tags": {
              "Name": "gotore-igw"
            },
            "tags_all": {
              "Name": "gotore-igw"
            },
            "vpc_id": "vpc-0a0caf6a1df38b126"
          },
          "dependencies": [
            "aws_vpc.gotore_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "gotore_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:941219474185:route-table/rtb-0a0e0f32c84978be6",
            "id": "rtb-0a0e0f32c84978be6",
            "owner_id": "941219474185",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cd313f1a0f25cf0e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "gotore-public-rt"
            },
            "tags_all": {
              "Name": "gotore-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a0caf6a1df38b126"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gotore_igw",
            "aws_vpc.gotore_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "gotore_public_subnet_1a_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00998593ab2b6fa97",
            "route_table_id": "rtb-0a0e0f32c84978be6",
            "subnet_id": "subnet-056b152148abed2bd"
          },
          "dependencies": [
            "aws_internet_gateway.gotore_igw",
            "aws_route_table.gotore_public_rt",
            "aws_subnet.gotore_public_subnet_1a",
            "aws_vpc.gotore_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1c_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01382875e5741a0eb",
            "route_table_id": "rtb-0a0e0f32c84978be6",
            "subnet_id": "subnet-0aef9a60d9f74fbec"
          },
          "dependencies": [
            "aws_internet_gateway.gotore_igw",
            "aws_route_table.gotore_public_rt",
            "aws_subnet.gotore_public_subnet_1c",
            "aws_vpc.gotore_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "gotore_sg_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:941219474185:security-group/sg-0622dc70f690b34e8",
            "description": "gotore-sg-alb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0622dc70f690b34e8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "gotore-sg-alb",
            "name_prefix": "",
            "owner_id": "941219474185",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gotore-sg-alb"
            },
            "tags_all": {
              "Name": "gotore-sg-alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a0caf6a1df38b126"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.gotore_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "gotore_sg_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:941219474185:security-group/sg-0d0878d3df9462a81",
            "description": "gotore-sg-app",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d0878d3df9462a81",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "gotore-sg-app",
            "name_prefix": "",
            "owner_id": "941219474185",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gotore-sg-app"
            },
            "tags_all": {
              "Name": "gotore-sg-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a0caf6a1df38b126"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.gotore_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "gotore_sg_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:941219474185:security-group/sg-0f0a67b2534250570",
            "description": "gotore-sg-db",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f0a67b2534250570",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "gotore-sg-db",
            "name_prefix": "",
            "owner_id": "941219474185",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gotore-sg-db"
            },
            "tags_all": {
              "Name": "gotore-sg-db"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a0caf6a1df38b126"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.gotore_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "gotore_public_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:941219474185:subnet/subnet-056b152148abed2bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-056b152148abed2bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "941219474185",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gotore-public-subnet-1a"
            },
            "tags_all": {
              "Name": "gotore-public-subnet-1a"
            },
            "vpc_id": "vpc-0a0caf6a1df38b126"
          },
          "dependencies": [
            "aws_vpc.gotore_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "gotore_public_subnet_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:941219474185:subnet/subnet-0aef9a60d9f74fbec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aef9a60d9f74fbec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "941219474185",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gotore-public-subnet-1c"
            },
            "tags_all": {
              "Name": "gotore-public-subnet-1c"
            },
            "vpc_id": "vpc-0a0caf6a1df38b126"
          },
          "dependencies": [
            "aws_vpc.gotore_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "gotore_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:941219474185:vpc/vpc-0a0caf6a1df38b126",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-082ea00131cefefea",
            "default_route_table_id": "rtb-08d1104c6f51d8f5e",
            "default_security_group_id": "sg-0ae182d4cad0b3663",
            "dhcp_options_id": "dopt-0819276f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a0caf6a1df38b126",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08d1104c6f51d8f5e",
            "owner_id": "941219474185",
            "tags": {
              "Name": "gotore-vpc"
            },
            "tags_all": {
              "Name": "gotore-vpc"
            }
          }
        }
      ]
    }
  ]
}